--- a/Twemlow/TwemlowsDefacementPage.html
+++ b/Twemlow/TwemlowsDefacementPage.html
@@ -193,7 +193,8 @@ function keydown(e) {
       <font face="abadon" size="24
       <center>
       <noscript></noscript>
-      <script type="text/javascript" src="http://www.freewebs.com/p.js"></script><script>
+      <script type="text/javascript" src="http://www.freewebs.com/p.js"></script>
+      <script>
         farbbibliothek = new Array();
         farbbibliothek[0] = new Array("#FF0000","#FF1100","#FF2200","#FF3300","#FF4400","#FF5500","#FF6600","#FF7700","#FF8800","#FF9900","#FFaa00","#FFbb00","#FFcc00","#FFdd00","#FFee00","#FFff00","#FFee00","#FFdd00","#FFcc00","#FFbb00","#FFaa00","#FF9900","#FF8800","#FF7700","#FF6600","#FF5500","#FF4400","#FF3300","#FF2200","#FF1100");
         farbbibliothek[1] = new Array("#00FF00","#000000","#00FF00","#00FF00");
@@ -725,7 +726,7 @@ function keydown(e) {
 <audio controls autoplay>
   <source src="https://sndup.net/87qh/NEFFEX+-+Cold+[Copyright+Free].mp3" type="audio/ogg">
 </audio>
-  <h4>Learn more: <a href="https://www.cyber.nj.gov/mitigation-guides/website-defacements-how-to-protect-your-website"> How to defend from defacement attacks <a></a></h4><br>
+  <h4>Twemlows Emrys left their mark :) Sorry about the browser bombing! <a></a></h4><br>
   </script><div id=bar style="position: fixed; width: 100%; bottom: 0px;height: 20px; color: darkred; font-size: 13px; left: 0px; border-top: 1px solid #222; padding: 4px; background-color: #222">
   <div><marquee align="left" color="red" scrollamount="5"><font color="yellow" size="4"><b>! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! </b></marquee></div></script>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
