--- a/Twemlow/TwemlowsDefacementPage.html
+++ b/Twemlow/TwemlowsDefacementPage.html
@@ -51,10 +51,6 @@ Want to download my web shell and defacement page?
     moveTitle();
   </script>
 
-  <link rel="stylesheet" href="https://development.guardiran.org/public/official-deface-page/dependencies/css/root.css" type="text/css">
-
-  <div class="overlay"></div>
-
   <body oncontextmenu="procreate(); return false;" onkeydown="procreate(); return false;" onmousedown="procreate(); return false;" bgcolor="white" text="black" onclick="procreate(); return false" onresize="procreate()">
 <script>
 		var xOff = 5;
@@ -598,13 +594,8 @@ function keydown(e) {
       <span class="style14">This has happened because the admin of this site is incompetent.</span></span><span class="style16"><br>
       <span class="style14">This website is vulnerable to SQLi, LFI/RFI and incompetence.</span></span><span class="style16"><br>
     </p>
-    <p align="center" class="style11">
-  <div id="defacer-info-container">
-    <div id="defacer-info">
-        <span>Hacked By </span>
-        <span class="defacer-name-container" style="margin-left: 20px;">[</span>
-        <marquee id="defacer-name">Twemlows Emrys</marquee>
-        <span class="defacer-name-container">]</span>
+<table border=0 width="555" bgcolor=#000000 cellspacing=0 cellpadding=3 style="border: #20C20E 4px solid">
+<tr><td align=center><b><font color=#20C20E><span class="twemlow-name-container" style="margin-left: 40px;"></span><marquee id="twemlow-name">Twemlows Emrys Was Here :)</marquee><span class="twemlow-name-container"></span></b></td></tr>
     </div>
 </div>
 
